--- a/templates/home/preguntas copy 4.html
+++ b/templates/home/preguntas copy 4.html
@@ -45,10 +45,17 @@
 
 {% block contenido %}
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
+        <div class="col-lg-2 col-md-12 bg-light border" style="">
+            <h3 class="text-center mt-3">Noticias OPE</h3>
+
+            <!-- Área de Mensajes -->
+            <div class="news-box flex-grow-1 p-3 overflow-auto" id="news-box">
        
-        <div class="col-lg-12 col-md-0 p-5" style="position:relative;">
+             </div>
+        </div>
+        <div class="col-lg-8 col-md-0 p-5" style="position:relative;">
 
         
 
@@ -194,10 +201,21 @@
             <!--Fin del Progresion panel-->
         </div>
 
+        <div class="col-lg-2 col-md-12 bg-light border d-flex flex-column" style="height: 100vh; overflow: hidden;">
+            <h3 class="text-center mt-3">Chat Social</h3>
+
+            <!-- Área de Mensajes -->
+            <div class="chat-box flex-grow-1 p-3 overflow-auto" id="chat-box">
        
+        </div>
 
     <!-- Formulario de Envío -->
-
+<form id="chat-form" class="p-3 border-top bg-white">
+    <div class="input-group">
+        <input type="text" id="chat-input" class="form-control" placeholder="Escribe un mensaje..." required>
+        <button type="submit" class="btn text-white" style="background-color:#1D7BAD;">Enviar</button>
+    </div>
+</form>
 </div>
     </div>
 </div>
@@ -227,7 +245,9 @@
   </div>
 </div>
 
-
+<a href="https://www.google.com" target="_blank" class="btn-premium">
+    ACTIVAR <br> PREMIUM
+</a>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
