--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -58,7 +58,7 @@
   <div class="row">
     {% for dato in ope %}
     {% if dato.published %}
-      <div class="col-lg-3 col-md-6 col-sm-12" style="">
+      <div class="col-lg-3 col-md-6 col-sm-12 mb-3" style="">
         <div class="card">
           <!--<img src="..." class="card-img-top" alt="...">-->
           <div class="card-body">
