--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -109,7 +109,7 @@
 <!-- Menú de navegación -->
 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
   <li><a href="{% url 'home_app:home' %}" class="nav-link px-2 link-secondary text-testope">{% trans 'Home' %}</a></li>
-  <li><a href="{% url 'home_app:sobre-nosotros' %}" class="nav-link px-2 text-testope">{% trans 'Sobre nosotros' %}</a></li>
+  <li><a href="{% url 'home_app:sobre-nosotros' %}" class="nav-link px-2 text-testope">{% trans 'Nosotros' %}</a></li>
   <li><a href="https://www.tuasistenteinteligente.com/testope/" class="nav-link px-2 text-testope">Bot</a></li>
   <li><a href="{% url 'home_app:contactar' %}" class="nav-link px-2 text-testope">{% trans 'Contactar' %}</a></li>
 
