--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -101,7 +101,7 @@
 
         <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
           <label>
-            <a style="text-decoration: none; color: #1D7BAD;" href="{% url 'home_app:home' %}"><b class="bg-dark text-white p-3" style="border-radius: 0px 0px 5px 5px;"><label style="color:#1D7BAD;">Test</label>OPE.eus</b></a>
+            <a style="text-decoration: none; color: #1D7BAD;" href="{% url 'home_app:home' %}"><b class="bg-dark text-white p-3" style="border-radius: 0px 0px 5px 5px;"><label style="color:#1D7BAD;">Test</label>OPE.net</b></a>
           </label>
         </a>
       </div>
